fixed styles on mobile

--- a/src/components/Sort/sort.module.css
+++ b/src/components/Sort/sort.module.css
@@ -8,7 +8,7 @@
 
 @media (max-width: 500px) {
     .sortContainer {
-        margin: 0;
+        /* margin: 0; */
         justify-content: space-between;
     }
 }
